--- a/style.css
+++ b/style.css
@@ -280,7 +280,7 @@ body {
 }
 
 .mouse__img_1 {
-    background-image: url(img/mouse__img_1.png);
+    background-image: url(img/mouse__img_1.svg);
 }
 
 .mouse__img_2 {
